# mail-receiver-rs

./: .gitignore  Cargo.toml  README.md  oci.json
.github/workflows/: autobuild.yaml
backend/: Cargo.toml
backend/src/: admin.rs  config.rs  main.rs  smtp.rs  storage.rs  types.rs
backend/tests/: attachment_parsing.rs  integration.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.ts
frontend/src/components/: MessageDetail.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  login.tsx  recipients.tsx  weekly.tsx
src/: admin.rs  config.rs  lib.rs  smtp.rs  storage.rs  types.rs
tests/: integration.rs
tools/fuzzer/: Cargo.toml
tools/fuzzer/src/: main.rs
tools/raw-sender/: Cargo.toml
tools/raw-sender/src/: main.rs
