[package]
name = "mail-receiver-rs"
version = "0.1.0"
edition = "2024"
description = "Simple SMTP Server that saves all emails to file"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = { version = "0.11", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
serde_urlencoded = "0.7"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
tempfile = "3"
